--- a/src/scenes/home/styles/app.css
+++ b/src/scenes/home/styles/app.css
@@ -28,19 +28,13 @@ body{
 
 
 .o-main{
-    width: calc(100% - 233px);
+    width: 100%;
     margin-left: 233px;
     padding: 41px 0;
+    transition: 0.2s margin ease;
 }
-
-.c-main-form {
-    width: 80%;
-    max-width: 500px;
-    margin: 0 auto;
-    background: #ffffff;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.16);
-    border-radius: 4px;
-    padding: 1em;
+.hide__main__nav .o-main{
+    margin-left: 0;
 }
 
 .o-main-layout{
@@ -51,93 +45,9 @@ body{
 }
 
 
-.c-main-input{
-    border: none;
-    width: 100%;
-    word-break: break-all;
-    resize: vertical;
-    overflow: auto;
-}
-
-.c-main-form textarea:focus+div {
-    display: inline-block;
-}
-
-.c-main-input:focus{
-    outline: none;
-}
 
 
 
 
-.js-edit-mode .o-note {
-    transform: scale(0.85);
-}
-
-.c-note-title {
-    font-weight: 500;
-    font-size: 19px;
-    padding-bottom: 15px;
-    color: #2A2A2A;
-    font-family: sans-serif;
-}
-
-.c-note-description {
-    font-family: sans-serif;
-    font-size: 15px;
-    letter-spacing: 0.3px;
-}
-
-.c-note-footer {
-    font-size: 11px;
-    border-top: 1px solid lightgrey;
-    margin-top: 30px;
-    padding: 10px 5px;
-}
 
 
-
-.o-note [class*="js-decorate-"]{
-  color: #ffba00
-}
-
-.js-decorate-star {
-  position: absolute;
-  top: -12px;
-  right: -10px;
-  font-size: 26px;
-  color: #EFC90C;
-}
-
-.js-decorate-in-footer {
-  display: block;
-  padding-top: 5px;
-  color: #EFC90C;
-}
-
-.js-edit-mode .o-note .o-samsung-checkbox {
-    transform: scale(1.3);
-}
-
-.js-note-edit {
-    transition: 0.2s all ease;
-    transform: scale(1);
-    position: absolute;
-    right: 0;
-}
-.js-edit-mode .js-note-edit {
-    transform: scale(0);
-}
-
-.js-catergory-edit {
-    position: absolute;
-    right: 20px;
-    padding: 4px 6px;
-    transition: 0.2s background ease;
-    cursor: pointer;
-    top: -4px;
-}
-
-.js-catergory-edit:hover{
-    background: #e3e3e3;
-}
